# scrmbl

./: .gitignore  .travis.yml  LICENSE  README.md  pyproject.toml
scrmbl/: __init__.py  charsets.py  cli.py  main.py  scrmbl.py
tests/: lipsum.txt  test_cli.py  test_scrmbl.py
